--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
 		  <h1>John Rose Netlify One</h1>
       <p>First paragraph of the Netlify free tier page</p>
-      
+	<p>Second paragraph!</p>
 </body>
 </html>
