--- a/functions-parameters-arguments.html
+++ b/functions-parameters-arguments.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-
+    <h3>The Wes Bos sample functions-parameters-arguments HTML page</h3>
     <script src="./functions-parameters-arguments.js">
 
     </script>
