--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
       <p>First paragraph of the Netlify free tier page</p>
 	<p>Second paragraph!</p>
 	<a href="functions-arguments-parameters.html">Link to the Wes Bos sample</a>
+	<a href="http://johnrose-glass.com">Link to my home page</a>
 </body>
 </html>
