--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		  <h1>John Rose Netlify One</h1>
       <p>First paragraph of the Netlify free tier page</p>
 	<p>Second paragraph!</p>
-	<a href="functions-arguments-parameters.html">Link to the Wes Bos sample</a>
+	<a href="http://functions-arguments-parameters.html">Link to the Wes Bos sample</a>
 	<a href="http://johnrose-glass.com">Link to my home page</a>
 </body>
 </html>
