--- a/linktest.html
+++ b/linktest.html
@@ -4,13 +4,13 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <link rel="stylesheet" type="text/css" href="netlifyone.css">
-<title>John Rose Netlify One</title>
+<title>The link test page</title>
 </head>
 <body>
-		  <h1>John Rose Netlify One</h1>
-      <p>First paragraph of the Netlify free tier page</p>
-	<p>Second paragraph!</p>
-	<p><a href="http://functions-arguments-parameters.html">Link to the Wes Bos sample</a></p>
+		  <h2>John Rose Netlify One Link Test</h2>
+      <p>First paragraph of the Netlify link test page</p>
+
+	<p><a href="linktest.html">Link to the link test page</a></p>
 	<p><a href="http://johnrose-glass.com">Link to my home page</a></p>
 </body>
 </html>
