--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 		  <h1>John Rose Netlify One</h1>
       <p>First paragraph of the Netlify free tier page</p>
 	<p>Second paragraph!</p>
-	<p><a href="http://functions-arguments-parameters.html">Link to the Wes Bos sample</a></p>
+	<p><a href="linktest.html">Link attempt to linktest</a></p>
+	<p><a href="./linktest.html">Link attempt to linktest with period slash</a></p>
 	<p><a href="http://johnrose-glass.com">Link to my home page</a></p>
 </body>
 </html>
