--- a/linktest.html
+++ b/linktest.html
@@ -9,8 +9,6 @@
 <body>
 		  <h2>John Rose Netlify One Link Test</h2>
       <p>First paragraph of the Netlify link test page</p>
-
-	<p><a href="linktest.html">Link to the link test page</a></p>
-	<p><a href="http://johnrose-glass.com">Link to my home page</a></p>
+	<p><a href="index.html">Link back to the home page</a></p>
 </body>
 </html>
