--- a/functions-parameters-arguments.html
+++ b/functions-parameters-arguments.html
@@ -9,7 +9,7 @@
 
 <body>
     <h3>The Wes Bos sample functions-parameters-arguments HTML page</h3>
-    <script src="./functions-parameters-arguments.js">
+    <script src="functions-parameters-arguments.js">
 
     </script>
 </body>
