--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<p>Second paragraph!</p>
 	<p><a href="linktest.html">Link attempt to linktest</a></p>
 	<p><a href="./linktest.html">Link attempt to linktest with period slash</a></p>
+	<p><a href="functions-arguments-parameters.html">Link attempt to javascript lesson page</a></p>
 	<p><a href="http://johnrose-glass.com">Link to my home page</a></p>
 	
 <form name="ntlfysample" method="POST" data-netlify="true">
