--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <title>John Rose Netlify One</title>
 </head>
 <body>
-		  <h1>John Rose Netlify One</h1>
+    <h1>John Rose Netlify One</h1>
+	<h2>Subtitle for the page>/h2>
+	
       <p>First paragraph of the Netlify free tier page</p>
 	<p>Second paragraph!</p>
 	<p><a href="linktest.html">Link attempt to linktest</a></p>
