Add a sub-heading

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>John Rose Netlify One</h1>
-	<h2>Subtitle for the page>/h2>
+	<h2>Subtitle for the page</h2>
 	
       <p>First paragraph of the Netlify free tier page</p>
 	<p>Second paragraph!</p>
