--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 		  <h1>John Rose Netlify One</h1>
+	
+	<h3>An h3 for now, before adding a subheading via a branch</h3>
       <p>First paragraph of the Netlify free tier page</p>
 	<p>Second paragraph!</p>
 	<p><a href="linktest.html">Link attempt to linktest</a></p>
