--- a/index.html
+++ b/index.html
@@ -7,37 +7,38 @@
 <title>John Rose Netlify One</title>
 </head>
 <body>
-		  <h1>John Rose Netlify One</h1>
-	
-	<h3>An h3 for now, before adding a subheading via a branch</h3>
-      <p>First paragraph of the Netlify free tier page</p>
-	<p>Second paragraph!</p>
-	<p><a href="linktest.html">Link attempt to linktest</a></p>
-	<p><a href="./linktest.html">Link attempt to linktest with period slash</a></p>
-	<p><a href="functions-parameters-arguments.html">Link attempt to javascript lesson page</a></p>
-	<p><a href="http://johnrose-glass.com">Link to my home page</a></p>
-	
-<form name="ntlfysample" method="POST" data-netlify="true">
-  <p>
-    <label>Your Name: <input type="text" name="name" /></label>   
-  </p>
-  <p>
-    <label>Your Email: <input type="email" name="email" /></label>
-  </p>
-  <p>
-    <label>Your Role: <select name="role[]" multiple>
-      <option value="leader">Leader</option>
-      <option value="follower">Follower</option>
-    </select></label>
-  </p>
-  <p>
-    <label>Message: <textarea name="message"></textarea></label>
-  </p>
-  <p>
-    <button type="submit">Send</button>
-  </p>
-</form>
-	
-	
+	<h1>John Rose Netlify One</h1>
+		<h2>Subheading</h2>
+			<ul>
+				<li>About</li>
+				<li>Container Queries</li>		
+			</ul
+			<h3>An h3 for now, before adding a subheading via a branch</h3>
+      	<p>First paragraph of the Netlify free tier page</p>
+				<p>Second paragraph!</p>
+				<p><a href="linktest.html">Link attempt to linktest</a></p>
+				<p><a href="./linktest.html">Link attempt to linktest with period slash</a></p>
+				<p><a href="functions-parameters-arguments.html">Link attempt to javascript lesson page</a></p>
+				<p><a href="http://johnrose-glass.com">Link to my home page</a></p>
+					<form name="ntlfysample" method="POST" data-netlify="true">
+  					<p>
+    					<label>Your Name: <input type="text" name="name" /></label>   
+  					</p>
+  					<p>
+    					<label>Your Email: <input type="email" name="email" /></label>
+  					</p>
+  					<p>
+   						<label>Your Role: <select name="role[]" multiple>
+      					<option value="leader">Leader</option>
+      					<option value="follower">Follower</option>
+    					</select></label>
+  					</p>
+  					<p>
+    					<label>Message: <textarea name="message"></textarea></label>
+  					</p>
+  					<p>
+    					<button type="submit">Send</button>
+ 					 </p>
+				</form>	
 </body>
 </html>
