--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     					<label>Message: <textarea name="message"></textarea></label>
   					</p>
   					<p>
-    					<button type="submit">Send</button>
+    					<button type="submit">Send It!</button>
  					 </p>
 				</form>	
 </body>
