--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<h1>John Rose Netlify One</h1>
 		<h2>Subheading</h2>
 			<ul>
-				<li>About</li>
+				<li>About Time</li>
 				<li>Container Queries</li>		
 			</ul>
 			<h3>An h3 for now, before adding a subheading via a branch</h3>
