--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<h1>John Rose Netlify One</h1>
-		<h2>Subheading</h2>
+		<h2>Subheading branch?</h2>
 			<ul>
 				<li>About</li>
 				<li>Container Queries</li>		
