--- a/pages/about.html
+++ b/pages/about.html
@@ -7,5 +7,6 @@
 <title>John Rose Netlify One</title>
 </head>
   <body>
-    <h1>All about John Rose</h1>
+    <h1 class="centered">Willamette Towers</h1>
+    <h2 class="centered">Reserves Study: 2022</h2>
    </body
