Model a reserves study

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <title>John Rose Netlify One</title>
 </head>
 <body>
-	<h1>John Rose Netlify One</h1>
-		<h2>Subheading</h2>
+	<h1 class="centered">Willamette Towers</h1>
+		<h2>Reserves Study: 2022</h2>
 			<ul>
 				<li>About</li>
 				<li>Container Queries</li>		
