--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 	<h1 class="centered">Willamette Towers</h1>
 		<h2 class="centered">Reserves Study: 2022</h2>
+	<img src="../assets/..."
 			<ul>
 				<li>About</li>
 				<li>Container Queries</li>		
