--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<h1 class="centered">Willamette Towers</h1>
 		<h2 class="centered">Reserves Study: 2022</h2>
-	<img src="./assets/wt_full_vert_edit2_72.jpg" />
+	<img class="centered" src="./assets/wt_full_vert_edit2_72.jpg" width=239 height=360/>
 			<ul>
 				<li>About</li>
 				<li>Container Queries</li>		
