--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 	<h1 class="centered">Willamette Towers</h1>
-		<h2 class="centered">Reserves Study: 2022</h2>
-	<img class="centered" src="./assets/wt_full_vert_edit2_72.jpg" width=239 height=360/>
+	<h2 class="centered">Reserves Study: 2022</h2>
+		<img class="centerimage" src="./assets/wt_full_vert_edit2_72.jpg" width=239 height=360/>
 			<ul>
 				<li>About</li>
 				<li>Container Queries</li>		
