--- a/index.html
+++ b/index.html
@@ -1,45 +1,49 @@
 <!doctype html>
 <html class="no-js" lang="en">
+
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<link rel="stylesheet" type="text/css" href="netlifyone.css">
-<title>John Rose Netlify One</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" type="text/css" href="netlifyone.css">
+	<title>John Rose Netlify One</title>
 </head>
+
 <body>
 	<h1 class="centered">Willamette Towers</h1>
 	<h2 class="centered">Reserves Study: 2022</h2>
-		<img class="centerimage" src="./assets/wt_full_vert_edit2_72.jpg" width=239 height=360/>
-			<ul>
-				<li>About</li>
-				<li>Container Queries</li>		
-			</ul>
-			<h3>An h3 for now, before adding a subheading via a branch</h3>
-      	<p>First paragraph of the Netlify free tier page</p>
-				<p>Second paragraph!</p>
-				<p><a href="linktest.html">Link attempt to linktest</a></p>
-				<p><a href="./linktest.html">Link attempt to linktest with period slash</a></p>
-				<p><a href="functions-parameters-arguments.html">Link attempt to javascript lesson page</a></p>
-				<p><a href="http://johnrose-glass.com">Link to my home page</a></p>
-					<form name="ntlfysample" method="POST" data-netlify="true">
-  					<p>
-    					<label>Your Name: <input type="text" name="name" /></label>   
-  					</p>
-  					<p>
-    					<label>Your Email: <input type="email" name="email" /></label>
-  					</p>
-  					<p>
-   						<label>Your Role: <select name="role[]" multiple>
-      					<option value="leader">Leader</option>
-      					<option value="follower">Follower</option>
-    					</select></label>
-  					</p>
-  					<p>
-    					<label>Message: <textarea name="message"></textarea></label>
-  					</p>
-  					<p>
-    					<button type="submit">Send</button>
- 					 </p>
-				</form>	
+	<img class="centerimage" src="./assets/wt_full_vert_edit2_72.jpg" width=239 height=360 />
+	<p>Let's just add something and see what happens</p>
+	<ul>
+		<li>About</li>
+		<li>Container Queries</li>
+	</ul>
+	<h3>An h3 for now, before adding a subheading via a branch</h3>
+	<p>First paragraph of the Netlify free tier page</p>
+	<p>Second paragraph!</p>
+	<p><a href="linktest.html">Link attempt to linktest</a></p>
+	<p><a href="./linktest.html">Link attempt to linktest with period slash</a></p>
+	<p><a href="functions-parameters-arguments.html">Link attempt to javascript lesson page</a></p>
+	<p><a href="http://johnrose-glass.com">Link to my home page</a></p>
+	<form name="ntlfysample" method="POST" data-netlify="true">
+		<p>
+			<label>Your Name: <input type="text" name="name" /></label>
+		</p>
+		<p>
+			<label>Your Email: <input type="email" name="email" /></label>
+		</p>
+		<p>
+			<label>Your Role: <select name="role[]" multiple>
+					<option value="leader">Leader</option>
+					<option value="follower">Follower</option>
+				</select></label>
+		</p>
+		<p>
+			<label>Message: <textarea name="message"></textarea></label>
+		</p>
+		<p>
+			<button type="submit">Send</button>
+		</p>
+	</form>
 </body>
+
 </html>
