--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 	<h2 class="centered">Reserves Study: 2022</h2>
 	<img class="centerimage" src="./assets/wt_full_vert_edit2_72.jpg" width=239 height=360 />
 	<p>Let's just add something and see what happens</p>
+	<div class="enterbox">
+		<p>Enter the starting amount of the reserves- numbers only</p>
+		<num>125976</num>
+	</div>
 	<ul>
 		<li>About</li>
 		<li>Container Queries</li>
