--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<li>About</li>
 		<li>Container Queries</li>
 	</ul>
+	<p>Adding a quick paragraph</p>
 	<h3>An h3 for now, before adding a subheading via a branch</h3>
 	<p>First paragraph of the Netlify free tier page</p>
 	<p>Second paragraph!</p>
