--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>John Rose Netlify One</title>
 </head>
 
-<body>
+<body class="wrapper">
 	<h1 class="centered">Willamette Towers</h1>
 	<h2 class="centered">Reserves Study: 2022</h2>
 	<img class="centerimage" src="./assets/wt_full_vert_edit2_72.jpg" width=239 height=360 />
